--- a/public/project.html
+++ b/public/project.html
@@ -845,14 +845,44 @@
                 currentVideoIndex = index;
                 const video = currentProject.videos[index];
 
-                // Encode each path segment separately
-                const projectIdSegments = currentProject.id.split('/').map(seg => encodeURIComponent(seg)).join('/');
-                const videoSegments = video.split('/').map(seg => encodeURIComponent(seg)).join('/');
-                const videoPath = `/projects/${projectIdSegments}/${videoSegments}`;
+                // Check if this is a YouTube URL
+                const isYouTube = video.includes('youtu.be') || video.includes('youtube.com');
 
-                // Use the video player
-                const player = document.getElementById('videoPlayer');
-                player.src = videoPath;
+                if (isYouTube) {
+                    // Convert YouTube URL to embed format
+                    let videoId = '';
+                    if (video.includes('youtu.be/')) {
+                        videoId = video.split('youtu.be/')[1].split('?')[0];
+                    } else if (video.includes('youtube.com/watch?v=')) {
+                        videoId = video.split('v=')[1].split('&')[0];
+                    }
+
+                    const embedUrl = `https://www.youtube.com/embed/${videoId}?autoplay=1&rel=0`;
+
+                    // Replace video player with YouTube iframe
+                    const container = document.getElementById('playerContainer');
+                    container.innerHTML = `
+                        <iframe 
+                            id="youtubePlayer"
+                            src="${embedUrl}"
+                            style="width: 100%; height: 100%; border: none;"
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                            allowfullscreen>
+                        </iframe>
+                    `;
+                } else {
+                    // Local video file - use HTML5 video player
+                    // Encode each path segment separately
+                    const projectIdSegments = currentProject.id.split('/').map(seg => encodeURIComponent(seg)).join('/');
+                    const videoSegments = video.split('/').map(seg => encodeURIComponent(seg)).join('/');
+                    const videoPath = `/projects/${projectIdSegments}/${videoSegments}`;
+
+                    // Use the video player
+                    const player = document.getElementById('videoPlayer');
+                    if (player) {
+                        player.src = videoPath;
+                    }
+                }
 
                 // Update active state in filmstrip
                 renderFilmstrip();
