--- a/public/prizes.html
+++ b/public/prizes.html
@@ -234,7 +234,8 @@
 
             <ul class="navbar-menu">
                 <li><a href="/" class="navbar-link">Projects</a></li>
-                <li><a href="/prizes.html" class="navbar-link active">Prizes</a></li>
+                <li><a href="/student-files.html" class="navbar-link">Student Files</a></li>
+                <li><a href="/test-page.html" class="navbar-link">Test Page</a></li>
             </ul>
 
             <div class="navbar-auth">
