--- a/public/student-progress.html
+++ b/public/student-progress.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -423,6 +424,7 @@
         }
     </style>
 </head>
+
 <body>
     <nav class="navbar">
         <div class="navbar-container">
@@ -436,6 +438,7 @@
                 <li><a href="/student-progress.html" class="navbar-link active">Student Progress</a></li>
                 <li><a href="/teacher.html" class="navbar-link">Teacher Panel</a></li>
                 <li><a href="/student-files.html" class="navbar-link">Student Files</a></li>
+                <li><a href="/test-page.html" class="navbar-link">Test Page</a></li>
             </ul>
 
             <div class="navbar-auth">
@@ -445,149 +448,144 @@
     </nav>
 
     <div class="page-content">
-    <div class="header">
-        <h1>📊 Student Progress Dashboard</h1>
-        <p>Track completed projects and student achievements</p>
-    </div>
-
-    <div class="container">
-        <button class="refresh-btn" onclick="refreshData()">🔄 Refresh Data</button>
-
-        <div class="search-container">
-            <input
-                type="text"
-                id="studentSearch"
-                class="search-input"
-                placeholder="🔍 Search for a student by name..."
-                oninput="filterStudents()"
-            />
-            <button class="clear-search-btn" onclick="clearSearch()">Clear</button>
-        </div>
-        <div id="searchInfo" class="search-results-info"></div>
-
-        <div id="offlineNotice" style="display: none;" class="offline-notice">
-            ⚠️ No internet connection. Showing cached data (may be outdated).
+        <div class="header">
+            <h1>📊 Student Progress Dashboard</h1>
+            <p>Track completed projects and student achievements</p>
         </div>
 
-        <div id="statsBar" style="display: none;" class="stats-bar">
-            <div class="stat-item">
-                <div class="stat-number" id="totalStudents">0</div>
-                <div class="stat-label">Total Students</div>
+        <div class="container">
+            <button class="refresh-btn" onclick="refreshData()">🔄 Refresh Data</button>
+
+            <div class="search-container">
+                <input type="text" id="studentSearch" class="search-input"
+                    placeholder="🔍 Search for a student by name..." oninput="filterStudents()" />
+                <button class="clear-search-btn" onclick="clearSearch()">Clear</button>
             </div>
-            <div class="stat-item">
-                <div class="stat-number" id="totalProjects">0</div>
-                <div class="stat-label">Total Projects</div>
+            <div id="searchInfo" class="search-results-info"></div>
+
+            <div id="offlineNotice" style="display: none;" class="offline-notice">
+                ⚠️ No internet connection. Showing cached data (may be outdated).
             </div>
-            <div class="stat-item">
-                <div class="stat-number" id="averageProjects">0</div>
-                <div class="stat-label">Avg per Student</div>
+
+            <div id="statsBar" style="display: none;" class="stats-bar">
+                <div class="stat-item">
+                    <div class="stat-number" id="totalStudents">0</div>
+                    <div class="stat-label">Total Students</div>
+                </div>
+                <div class="stat-item">
+                    <div class="stat-number" id="totalProjects">0</div>
+                    <div class="stat-label">Total Projects</div>
+                </div>
+                <div class="stat-item">
+                    <div class="stat-number" id="averageProjects">0</div>
+                    <div class="stat-label">Avg per Student</div>
+                </div>
+            </div>
+
+            <div id="content">
+                <div class="loading">Loading student progress...</div>
             </div>
         </div>
 
-        <div id="content">
-            <div class="loading">Loading student progress...</div>
-        </div>
-    </div>
+        <script src="/socket.io/socket.io.js"></script>
+        <script>
+            let allStudents = [];
+            let filteredStudents = [];
 
-    <script src="/socket.io/socket.io.js"></script>
-    <script>
-        let allStudents = [];
-        let filteredStudents = [];
+            // WebSocket connection
+            const socket = io();
 
-        // WebSocket connection
-        const socket = io();
+            socket.on('connect', () => {
+                console.log('Connected to server via WebSocket');
+                socket.emit('page-change', { page: 'Student Progress Dashboard' });
+            });
 
-        socket.on('connect', () => {
-            console.log('Connected to server via WebSocket');
-            socket.emit('page-change', { page: 'Student Progress Dashboard' });
-        });
+            socket.on('navigate', (data) => {
+                window.location.href = data.url;
+            });
 
-        socket.on('navigate', (data) => {
-            window.location.href = data.url;
-        });
+            async function loadStudentProgress() {
+                try {
+                    const response = await fetch('/api/google-sheets/student-progress');
+                    const data = await response.json();
 
-        async function loadStudentProgress() {
-            try {
-                const response = await fetch('/api/google-sheets/student-progress');
-                const data = await response.json();
-
-                if (!data.success) {
-                    if (data.offline) {
-                        document.getElementById('offlineNotice').style.display = 'block';
+                    if (!data.success) {
+                        if (data.offline) {
+                            document.getElementById('offlineNotice').style.display = 'block';
+                        }
+                        showError(data.error + ': ' + data.message);
+                        return;
                     }
-                    showError(data.error + ': ' + data.message);
-                    return;
+
+                    allStudents = data.students;
+                    filteredStudents = allStudents;
+                    displayStudentProgress();
+                    updateSearchInfo();
+                } catch (error) {
+                    showError('Failed to load student progress: ' + error.message);
+                }
+            }
+
+            function filterStudents() {
+                const searchTerm = document.getElementById('studentSearch').value.toLowerCase().trim();
+
+                if (searchTerm === '') {
+                    filteredStudents = allStudents;
+                } else {
+                    filteredStudents = allStudents.filter(student =>
+                        student.name.toLowerCase().includes(searchTerm)
+                    );
                 }
 
-                allStudents = data.students;
+                displayStudentProgress();
+                updateSearchInfo();
+            }
+
+            function clearSearch() {
+                document.getElementById('studentSearch').value = '';
                 filteredStudents = allStudents;
                 displayStudentProgress();
                 updateSearchInfo();
-            } catch (error) {
-                showError('Failed to load student progress: ' + error.message);
-            }
-        }
-
-        function filterStudents() {
-            const searchTerm = document.getElementById('studentSearch').value.toLowerCase().trim();
-
-            if (searchTerm === '') {
-                filteredStudents = allStudents;
-            } else {
-                filteredStudents = allStudents.filter(student =>
-                    student.name.toLowerCase().includes(searchTerm)
-                );
             }
 
-            displayStudentProgress();
-            updateSearchInfo();
-        }
+            function updateSearchInfo() {
+                const searchInfo = document.getElementById('searchInfo');
+                const searchTerm = document.getElementById('studentSearch').value.trim();
 
-        function clearSearch() {
-            document.getElementById('studentSearch').value = '';
-            filteredStudents = allStudents;
-            displayStudentProgress();
-            updateSearchInfo();
-        }
-
-        function updateSearchInfo() {
-            const searchInfo = document.getElementById('searchInfo');
-            const searchTerm = document.getElementById('studentSearch').value.trim();
-
-            if (searchTerm && filteredStudents.length < allStudents.length) {
-                searchInfo.textContent = `Showing ${filteredStudents.length} of ${allStudents.length} students`;
-                searchInfo.style.display = 'block';
-            } else {
-                searchInfo.style.display = 'none';
-            }
-        }
-
-        function displayStudentProgress() {
-            const content = document.getElementById('content');
-
-            if (allStudents.length === 0) {
-                content.innerHTML = '<div class="no-students">No students found</div>';
-                return;
+                if (searchTerm && filteredStudents.length < allStudents.length) {
+                    searchInfo.textContent = `Showing ${filteredStudents.length} of ${allStudents.length} students`;
+                    searchInfo.style.display = 'block';
+                } else {
+                    searchInfo.style.display = 'none';
+                }
             }
 
-            if (filteredStudents.length === 0) {
-                content.innerHTML = '<div class="no-students">No students match your search</div>';
-                return;
-            }
+            function displayStudentProgress() {
+                const content = document.getElementById('content');
 
-            // Calculate overall stats based on filtered students
-            const totalStudents = filteredStudents.length;
-            const totalProjects = filteredStudents.reduce((sum, s) => sum + s.completedCount, 0);
-            const averageProjects = totalStudents > 0 ? (totalProjects / totalStudents).toFixed(1) : 0;
+                if (allStudents.length === 0) {
+                    content.innerHTML = '<div class="no-students">No students found</div>';
+                    return;
+                }
 
-            // Update stats bar
-            document.getElementById('totalStudents').textContent = totalStudents;
-            document.getElementById('totalProjects').textContent = totalProjects;
-            document.getElementById('averageProjects').textContent = averageProjects;
-            document.getElementById('statsBar').style.display = 'flex';
+                if (filteredStudents.length === 0) {
+                    content.innerHTML = '<div class="no-students">No students match your search</div>';
+                    return;
+                }
 
-            // Generate student cards from filtered students
-            const html = `
+                // Calculate overall stats based on filtered students
+                const totalStudents = filteredStudents.length;
+                const totalProjects = filteredStudents.reduce((sum, s) => sum + s.completedCount, 0);
+                const averageProjects = totalStudents > 0 ? (totalProjects / totalStudents).toFixed(1) : 0;
+
+                // Update stats bar
+                document.getElementById('totalStudents').textContent = totalStudents;
+                document.getElementById('totalProjects').textContent = totalProjects;
+                document.getElementById('averageProjects').textContent = averageProjects;
+                document.getElementById('statsBar').style.display = 'flex';
+
+                // Generate student cards from filtered students
+                const html = `
                 <div class="student-grid">
                     ${filteredStudents.map((student, index) => `
                         <div class="student-card">
@@ -614,11 +612,11 @@
                                     </div>
                                     <div class="projects-list" id="projects-${index}">
                                         ${student.projects.map(proj => {
-                                            const isCompleted = proj.projectStatus && proj.projectStatus.toLowerCase().includes('completed');
-                                            const isInProgress = proj.projectStatus && (proj.projectStatus.toLowerCase().includes('progress') || proj.projectStatus.toLowerCase().includes('working'));
-                                            const className = isCompleted ? 'completed' : isInProgress ? 'in-progress' : '';
+                    const isCompleted = proj.projectStatus && proj.projectStatus.toLowerCase().includes('completed');
+                    const isInProgress = proj.projectStatus && (proj.projectStatus.toLowerCase().includes('progress') || proj.projectStatus.toLowerCase().includes('working'));
+                    const className = isCompleted ? 'completed' : isInProgress ? 'in-progress' : '';
 
-                                            return `
+                    return `
                                                 <div class="project-item ${className}">
                                                     <div class="project-name">${proj.projectName || 'Unnamed Project'}</div>
                                                     <div class="project-details">
@@ -628,7 +626,7 @@
                                                     </div>
                                                 </div>
                                             `;
-                                        }).join('')}
+                }).join('')}
                                     </div>
                                 </div>
                             ` : '<div style="color: #6B7280; font-style: italic;">No projects yet</div>'}
@@ -637,62 +635,63 @@
                 </div>
             `;
 
-            content.innerHTML = html;
-        }
-
-        function toggleProjects(index) {
-            const projectsList = document.getElementById(`projects-${index}`);
-            const toggleIcon = document.getElementById(`toggle-${index}`);
-
-            projectsList.classList.toggle('open');
-            toggleIcon.classList.toggle('open');
-        }
-
-        function showError(message) {
-            const content = document.getElementById('content');
-            content.innerHTML = `<div class="error">❌ ${message}</div>`;
-        }
-
-        async function refreshData() {
-            // Clear cache and reload
-            try {
-                await fetch('/api/google-sheets/clear-cache', { method: 'POST' });
-                document.getElementById('content').innerHTML = '<div class="loading">Refreshing student progress...</div>';
-                document.getElementById('offlineNotice').style.display = 'none';
-                loadStudentProgress();
-            } catch (error) {
-                console.error('Error refreshing:', error);
+                content.innerHTML = html;
             }
-        }
 
-        // Load on page load
-        loadStudentProgress();
+            function toggleProjects(index) {
+                const projectsList = document.getElementById(`projects-${index}`);
+                const toggleIcon = document.getElementById(`toggle-${index}`);
 
-        // Auto-refresh every 5 minutes
-        setInterval(loadStudentProgress, 5 * 60 * 1000);
-    </script>
+                projectsList.classList.toggle('open');
+                toggleIcon.classList.toggle('open');
+            }
+
+            function showError(message) {
+                const content = document.getElementById('content');
+                content.innerHTML = `<div class="error">❌ ${message}</div>`;
+            }
+
+            async function refreshData() {
+                // Clear cache and reload
+                try {
+                    await fetch('/api/google-sheets/clear-cache', { method: 'POST' });
+                    document.getElementById('content').innerHTML = '<div class="loading">Refreshing student progress...</div>';
+                    document.getElementById('offlineNotice').style.display = 'none';
+                    loadStudentProgress();
+                } catch (error) {
+                    console.error('Error refreshing:', error);
+                }
+            }
+
+            // Load on page load
+            loadStudentProgress();
+
+            // Auto-refresh every 5 minutes
+            setInterval(loadStudentProgress, 5 * 60 * 1000);
+        </script>
 
     </div> <!-- Close page-content -->
-<footer>
-  <p>Last Updated: <span id="last-updated"></span></p>
-</footer>
-<style>
-  footer {
-    text-align: center;
-    padding: 1rem;
-    margin-top: 2rem;
-    font-size: 0.9em;
-    color: #6c757d;
-  }
-</style>
-<script>
-  document.addEventListener('DOMContentLoaded', function() {
-    const lastUpdatedElement = document.getElementById('last-updated');
-    if (lastUpdatedElement) {
-      const now = new Date();
-      lastUpdatedElement.textContent = now.toLocaleString();
-    }
-  });
-</script>
+    <footer>
+        <p>Last Updated: <span id="last-updated"></span></p>
+    </footer>
+    <style>
+        footer {
+            text-align: center;
+            padding: 1rem;
+            margin-top: 2rem;
+            font-size: 0.9em;
+            color: #6c757d;
+        }
+    </style>
+    <script>
+        document.addEventListener('DOMContentLoaded', function () {
+            const lastUpdatedElement = document.getElementById('last-updated');
+            if (lastUpdatedElement) {
+                const now = new Date();
+                lastUpdatedElement.textContent = now.toLocaleString();
+            }
+        });
+    </script>
 </body>
+
 </html>
