--- a/public/teacher.html
+++ b/public/teacher.html
@@ -412,6 +412,7 @@
                 <li><a href="/prizes.html" class="navbar-link">Prizes</a></li>
                 <li><a href="/teacher.html" class="navbar-link active">Teacher Panel</a></li>
                 <li><a href="/student-files.html" class="navbar-link">Student Files</a></li>
+                <li><a href="/test-page.html" class="navbar-link">Test Page</a></li>
             </ul>
 
             <div class="navbar-auth">
