--- a/public/ratings.html
+++ b/public/ratings.html
@@ -333,6 +333,8 @@
             <ul class="navbar-menu">
                 <li><a href="/" class="navbar-link">Projects</a></li>
                 <li><a href="/teacher.html" class="navbar-link">Teacher Panel</a></li>
+                <li><a href="/student-files.html" class="navbar-link">Student Files</a></li>
+                <li><a href="/test-page.html" class="navbar-link">Test Page</a></li>
                 <li><a href="/ratings.html" class="navbar-link active">Ratings</a></li>
             </ul>
 
