--- a/public/staging.html
+++ b/public/staging.html
@@ -1177,6 +1177,7 @@
                 <li><a href="/prizes.html" class="navbar-link">Prizes</a></li>
                 <li><a href="/teacher.html" class="navbar-link">Teacher Panel</a></li>
                 <li><a href="/student-files.html" class="navbar-link">Student Files</a></li>
+                <li><a href="/test-page.html" class="navbar-link">Test Page</a></li>
             </ul>
 
             <div class="navbar-auth">
