Implement Online/Offline mode indicator

--- a/public/index.html
+++ b/public/index.html
@@ -2740,6 +2740,7 @@
             updateSidebarState();
         });
     </script>
+    <script src="mode-indicator.js"></script>
 </body>
 
 </html>
