--- a/public/prizes.html
+++ b/public/prizes.html
@@ -331,6 +331,7 @@
             grid.innerHTML = `<div class="error-message">${message}</div>`;
         }
     </script>
+    <script src="mode-indicator.js"></script>
 </body>
 
 </html>
