--- a/public/test-page.html
+++ b/public/test-page.html
@@ -39,7 +39,8 @@
             display: flex;
             align-items: center;
             justify-content: space-between;
-            height: 70px; /* Consistently using 70px as seen in other files, though index.css had flex height */
+            height: 70px;
+            /* Consistently using 70px as seen in other files, though index.css had flex height */
             padding-top: 10px;
             padding-bottom: 10px;
         }
@@ -97,7 +98,7 @@
             align-items: center;
             gap: 15px;
         }
-        
+
         .navbar-btn {
             background: #3B82F6;
             color: white;
@@ -124,7 +125,7 @@
             padding: 40px 20px;
             text-align: center;
         }
-        
+
         h1 {
             font-size: 2.5em;
             margin-bottom: 20px;
@@ -151,7 +152,7 @@
             </ul>
 
             <div class="navbar-auth">
-                 <a href="/" class="navbar-btn">Back to Home</a>
+                <a href="/" class="navbar-btn">Back to Home</a>
             </div>
         </div>
     </nav>
@@ -159,5 +160,7 @@
     <div class="container">
         <h1>This page is working</h1>
     </div>
+    <script src="mode-indicator.js"></script>
 </body>
+
 </html>
