--- a/public/staging.html
+++ b/public/staging.html
@@ -2319,6 +2319,7 @@
             updateSidebarState();
         });
     </script>
+    <script src="mode-indicator.js"></script>
 </body>
 
 </html>
